# multi_robot_deep_rl_navigation

./: README.md  out.ogv
collision_avoidance/: CMakeLists.txt
collision_avoidance/goal_point/: multi_env_20.txt  stage2.txt  world_1_20.txt
collision_avoidance/init_pose/: multi_env_20.txt
collision_avoidance/launch/: circle_20.launch  multi_env_20.launch
collision_avoidance/src/: test_policy.py
collision_avoidance/world/: circle_20.world  multi_env_20.world
deep_rl_navigation/: CMakeLists.txt  package.xml  setup.py
deep_rl_navigation/config/: deep_rl_navigation_params.yaml  map_plus.yaml  map_plus_20.yaml
deep_rl_navigation/launch/: deep_rl_navigation.launch  map_plus.launch  map_plus_20.launch  test_policy.launch
deep_rl_navigation/parameters/: beta.txt  cumulative_reward.txt
deep_rl_navigation/rviz/: deep_rl_navigation.rviz  map_plus_20.rviz
deep_rl_navigation/slam/: map_plus_20.yaml
deep_rl_navigation/src/: main.py  run_and_train.py  test.py  test_policy.py  train_policy.py
deep_rl_navigation_2021/: CMakeLists.txt  package.xml  setup.py  test.py
deep_rl_navigation_2021/config/: deep_rl_navigation_params.yaml  map_plus.yaml
deep_rl_navigation_2021/launch/: map_plus.launch  map_plus_ppo.launch  random_pose.launch  test_policy.launch  test_policy_ppo.launch
deep_rl_navigation_2021/maps/: map_plus.yaml
deep_rl_navigation_2021/parameters/: actor_4_541_21_parameters.pt  critic_4_541_parameters.pt  cumulative_reward.txt
deep_rl_navigation_2021/ppo_train_parameters/: cumulative_reward.txt  policy_4_541_21_parameters.pt
deep_rl_navigation_2021/pre_train/: actor_4_541_21_parameters.pt  beta.txt  critic_4_541_parameters.pt  cumulative_reward.txt  cumulative_reward_5_robot.txt
deep_rl_navigation_2021/rviz/: map_plus.rviz
deep_rl_navigation_2021/src/: test_policy.py  test_policy_ppo.py  train_policy.py  train_policy_ppo.py
deep_rl_navigation_2021/weights_bias/: actor_4_541_21_parameters.pt  critic_4_541_parameters.pt  cumulative_reward.txt
multi_robot_environment/: CMakeLists.txt  package.xml
multi_robot_environment/config/: random_scenarios.yaml
multi_robot_environment/launch/: empty_world.launch  map_plus.launch  map_plus_20.launch  maze_world.launch  robot_tf.launch
multi_robot_environment/maps/: resize.py
multi_robot_environment/src/: random_scenarios.cpp
multi_robot_environment/stage/: empty.world  map.inc  map_plus.world  map_plus_20.world  (+3 more)
(+95 files in other folders)
